postgis (1.5.2-2) unstable; urgency=low

  * Repository moved to git and changed Vcs-* fields in debian/control.
  * Removed obsolete debian/*_lenny.
  * Policy bumped to 3.9.1. No changes.
  * Moved to source format 3.0 with quilt support.
  * Dehelper compatibility level set to 8.
  * Updated README to reflect current location of template SQL files.
    (closes: #575622)
  * Postrm was assigned to the wrong package (postgis), which caused 
    unexpected behavior on purging. Now each purge of postgresql-*-postgis will
    cause extension removal.
    (closes: #596663)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 24 Mar 2011 18:05:46 +0100

postgis (1.5.2-1) unstable; urgency=low

  * New upstream release, with a few bug fixes.
  * Added shp2pgsql-gui binary.
  * Removed patches, applied upstream: getopt.	

 -- Alan Boudreault <aboudreault@mapgears.com>  Wed, 29 Sep 2010 09:16:10 -0400

postgis (1.5.1-5) unstable; urgency=high

  * This version requires geos >= 3.1.1, debian/control updated.
    (closes: #580462)
  * Moved libpostgis-java to java section.
  * README.Debian has been fixed for old lwpostgis.sql since ages. Just ack.
    (closes: #575622)

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 24 May 2010 09:40:32 +0200

postgis (1.5.1-4) unstable; urgency=high

  * [PATCH] getopt.dpatch added to avoid var collisions among Postgis getopt
    and glibc one. That solves a FTBS on mips/mipsel.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sat, 22 May 2010 19:03:39 +0200

postgis (1.5.1-3) unstable; urgency=medium

  * Removed custom CFLAGS which probably caused FTBS on mips/mipsel archs.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sat, 22 May 2010 11:20:44 +0200

postgis (1.5.1-2) unstable; urgency=low

  * Added generator.dpatch to avoid a buffer overflow on alpha due to 
    a too narrow buffer apparently.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Mon, 17 May 2010 14:21:37 +0200
