@@ -2,7 +2,7 @@ postgis (1.5.2-2) unstable; urgency=low
 
   * Repository moved to git and changed Vcs-* fields in debian/control.
   * Removed obsolete debian/*_lenny.
-  * Policy bumped to 3.9.1. No changes.
+  * Policy bumped to 3.9.2. No changes.
   * Moved to source format 3.0 with quilt support.
   * Dehelper compatibility level set to 8.
   * Updated README to reflect current location of template SQL files.
@@ -11,8 +11,10 @@ postgis (1.5.2-2) unstable; urgency=low
     unexpected behavior on purging. Now each purge of postgresql-*-postgis will
     cause extension removal.
     (closes: #596663)
+  * Added PostgreSQL 9.0 support.
+    (closes: #633111)
 
- -- Francesco Paolo Lovergine <frankie@debian.org>  Thu, 24 Mar 2011 18:05:46 +0100
+ -- Francesco Paolo Lovergine <frankie@debian.org>  Fri, 08 Jul 2011 17:16:12 +0200
 
 postgis (1.5.2-1) unstable; urgency=low
 
